// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse SNAPSHOTS multi-opened state in controlled mode should render both bodies opened 1`] = `
<Collapse
  activePanelKey={
    Array [
      "1",
      "2",
    ]
  }
  isAccordion={true}
  onSelect={[MockFunction]}
>
  <Collapse.Panel
    panelKey="1"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading>
          <Wrapper
            className="collapse-heading-wrapper"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING 1
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon icon-expanded"
                  isExpanded={true}
                >
                  <defaultIcon
                    className="collapse-heading-icon icon-expanded"
                    isExpanded={true}
                  >
                    <Span
                      className="collapse-heading-icon icon-expanded"
                    >
                      <span
                        className="collapse-heading-icon icon-expanded"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body>
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={true}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "auto",
                        "overflow": "visible",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "visible",
                        "willChange": "height",
                      }
                    }
                  >
                    <Div
                      className="test-1"
                    >
                      <div
                        className="test-1"
                      >
                        SOME FIRST TEST
                      </div>
                    </Div>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
  <Collapse.Panel
    panelKey="2"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading>
          <Wrapper
            className="collapse-heading-wrapper"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING 2
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon icon-expanded"
                  isExpanded={true}
                >
                  <defaultIcon
                    className="collapse-heading-icon icon-expanded"
                    isExpanded={true}
                  >
                    <Span
                      className="collapse-heading-icon icon-expanded"
                    >
                      <span
                        className="collapse-heading-icon icon-expanded"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body>
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={true}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "auto",
                        "overflow": "visible",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "visible",
                        "willChange": "height",
                      }
                    }
                  >
                    <Div
                      className="test-2"
                    >
                      <div
                        className="test-2"
                      >
                        SOME SECOND TEST
                      </div>
                    </Div>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
</Collapse>
`;

exports[`Collapse SNAPSHOTS multi-opened state in controlled mode should render only first body opened 1`] = `
<Collapse
  activePanelKey="1"
  isAccordion={true}
  onSelect={[MockFunction]}
>
  <Collapse.Panel
    panelKey="1"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading>
          <Wrapper
            className="collapse-heading-wrapper"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING 1
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon icon-expanded"
                  isExpanded={true}
                >
                  <defaultIcon
                    className="collapse-heading-icon icon-expanded"
                    isExpanded={true}
                  >
                    <Span
                      className="collapse-heading-icon icon-expanded"
                    >
                      <span
                        className="collapse-heading-icon icon-expanded"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body>
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={true}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "auto",
                        "overflow": "visible",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "visible",
                        "willChange": "height",
                      }
                    }
                  >
                    <Div
                      className="test-1"
                    >
                      <div
                        className="test-1"
                      >
                        SOME FIRST TEST
                      </div>
                    </Div>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
  <Collapse.Panel
    panelKey="2"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading>
          <Wrapper
            className="collapse-heading-wrapper"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING 2
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon"
                  isExpanded={false}
                >
                  <defaultIcon
                    className="collapse-heading-icon"
                    isExpanded={false}
                  >
                    <Span
                      className="collapse-heading-icon"
                    >
                      <span
                        className="collapse-heading-icon"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body>
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={false}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "0px",
                        "overflow": "visible",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "visible",
                        "willChange": "height",
                      }
                    }
                  >
                    <Div
                      className="test-2"
                    >
                      <div
                        className="test-2"
                      >
                        SOME SECOND TEST
                      </div>
                    </Div>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
</Collapse>
`;

exports[`Collapse SNAPSHOTS multi-opened state in uncontrolled mode should render both bodies closed 1`] = `
<Collapse
  isAccordion={true}
>
  <Collapse.Panel
    panelKey="1"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading
          className="head-1"
        >
          <Wrapper
            className="collapse-heading-wrapper head-1"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper head-1"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper head-1"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING 1
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon"
                  isExpanded={false}
                >
                  <defaultIcon
                    className="collapse-heading-icon"
                    isExpanded={false}
                  >
                    <Span
                      className="collapse-heading-icon"
                    >
                      <span
                        className="collapse-heading-icon"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body>
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={false}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "0",
                        "overflow": "hidden",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "hidden",
                        "willChange": "height",
                      }
                    }
                  >
                    <Div
                      className="test-1"
                    >
                      <div
                        className="test-1"
                      >
                        SOME FIRST TEST
                      </div>
                    </Div>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
  <Collapse.Panel
    panelKey="2"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading
          className="head-2"
        >
          <Wrapper
            className="collapse-heading-wrapper head-2"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper head-2"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper head-2"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING 2
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon"
                  isExpanded={false}
                >
                  <defaultIcon
                    className="collapse-heading-icon"
                    isExpanded={false}
                  >
                    <Span
                      className="collapse-heading-icon"
                    >
                      <span
                        className="collapse-heading-icon"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body>
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={false}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "0",
                        "overflow": "hidden",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "hidden",
                        "willChange": "height",
                      }
                    }
                  >
                    <Div
                      className="test-2"
                    >
                      <div
                        className="test-2"
                      >
                        SOME SECOND TEST
                      </div>
                    </Div>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
</Collapse>
`;

exports[`Collapse SNAPSHOTS should render closed state 1`] = `
<Collapse
  activePanelKey="0"
  onSelect={[MockFunction]}
>
  <Collapse.Panel
    panelKey="1"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading>
          <Wrapper
            className="collapse-heading-wrapper"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon"
                  isExpanded={false}
                >
                  <defaultIcon
                    className="collapse-heading-icon"
                    isExpanded={false}
                  >
                    <Span
                      className="collapse-heading-icon"
                    >
                      <span
                        className="collapse-heading-icon"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body>
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={false}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "0",
                        "overflow": "hidden",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "hidden",
                        "willChange": "height",
                      }
                    }
                  >
                    <Div>
                      <div>
                        SOME TEST
                      </div>
                    </Div>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
</Collapse>
`;

exports[`Collapse SNAPSHOTS should render loading state 1`] = `
<Collapse
  activePanelKey="1"
  onSelect={[MockFunction]}
>
  <Collapse.Panel
    panelKey="1"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading>
          <Wrapper
            className="collapse-heading-wrapper"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon icon-expanded"
                  isExpanded={true}
                >
                  <defaultIcon
                    className="collapse-heading-icon icon-expanded"
                    isExpanded={true}
                  >
                    <Span
                      className="collapse-heading-icon icon-expanded"
                    >
                      <span
                        className="collapse-heading-icon icon-expanded"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body
          isLoading={true}
        >
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={true}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "auto",
                        "overflow": "visible",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "visible",
                        "willChange": "height",
                      }
                    }
                  >
                    <Loader>
                      <Div
                        className="loader-wrapper"
                      >
                        <div
                          className="loader-wrapper"
                        >
                          <div
                            className="loader-container"
                          >
                            <Icon
                              className="loader-element"
                            >
                              <Span
                                className="loader-element"
                              >
                                <span
                                  className="loader-element"
                                />
                              </Span>
                            </Icon>
                          </div>
                        </div>
                      </Div>
                    </Loader>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
</Collapse>
`;

exports[`Collapse SNAPSHOTS should render opened state 1`] = `
<Collapse
  activePanelKey="1"
  onSelect={[MockFunction]}
>
  <Collapse.Panel
    panelKey="1"
  >
    <Wrapper>
      <defaultPanelWrapper>
        <Collapse.Heading>
          <Wrapper
            className="collapse-heading-wrapper"
            onClick={[Function]}
          >
            <Div
              className="collapse-heading-wrapper"
              onClick={[Function]}
            >
              <div
                className="collapse-heading-wrapper"
                onClick={[Function]}
              >
                <H1>
                  <h1>
                    HEADING
                  </h1>
                </H1>
                <Icon
                  className="collapse-heading-icon icon-expanded"
                  isExpanded={true}
                >
                  <defaultIcon
                    className="collapse-heading-icon icon-expanded"
                    isExpanded={true}
                  >
                    <Span
                      className="collapse-heading-icon icon-expanded"
                    >
                      <span
                        className="collapse-heading-icon icon-expanded"
                      />
                    </Span>
                  </defaultIcon>
                </Icon>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Heading>
        <Collapse.Body>
          <Wrapper>
            <Div>
              <div>
                <Collapse
                  className="react-css-collapse-transition"
                  isOpen={true}
                  onRest={[Function]}
                  transition="height 250ms cubic-bezier(.4, 0, .2, 1)"
                >
                  <div
                    className="react-css-collapse-transition"
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "height": "auto",
                        "overflow": "visible",
                        "transition": "height 250ms cubic-bezier(.4, 0, .2, 1)",
                        "visibility": "visible",
                        "willChange": "height",
                      }
                    }
                  >
                    <Div>
                      <div>
                        SOME TEST
                      </div>
                    </Div>
                  </div>
                </Collapse>
              </div>
            </Div>
          </Wrapper>
        </Collapse.Body>
      </defaultPanelWrapper>
    </Wrapper>
  </Collapse.Panel>
</Collapse>
`;
